# github-actions-practice

./: .coverage  .gitignore  LICENSE  README.md  buildspec.yml  pyproject.toml  requirements-dev.txt  sample.txt  sample_utf-16.txt
.github/workflows/: github-actions-demo.yml  python-app-push-to-aws  python-app-push-to-aws.yml  python-app-run-on-aws.yml  python-app.yml
old-workflows/: actions.yml  github-actions-demo.yml  python-app-run-on-aws.yml
src/file_encoder/: __init__.py  cli.py  encoder.py
src/file_encoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tests/: test_cli.py  test_integration.py
tests/: test_cli.py  test_encoder.py  test_integration.py
